<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">QuickZet\nGoa\'s Taxi</string>
    <string name="text_my_booking">My bookings</string>
    <string name="text_history">History</string>
    <string name="text_logout">Logout</string>
    <string name="text_eta">ETA</string>
    <string name="text_log_in">Login</string>
    <string name="text_close">Close</string>
    <string name="text_create_trip">Create trip</string>
    <string name="text_on_going_trip">Ongoing trip</string>
    <string name="text_register">Register</string>
    <string name="text_trip_history">History </string>
    <string name="text_trip_history_detail">History</string>
    <string name="text_profile">Profile</string>
    <string name="text_contact">Contact us</string>
    <string name="text_payments">Payment</string>
    <string name="text_email">Email</string>
    <string name="text_hint_enter_email">Email</string>
    <string name="text_password">Password</string>
    <string name="text_fast_name_hint">First name</string>
    <string name="text_last_name_hint">Last name</string>
    <string name="text_forgot_password">Forgot password?</string>
    <string name="text_hint_enter_password">Password</string>
    <string name="text_first_name_caps">FIRST NAME</string>
    <string name="text_pass_current_hint">Current password</string>
    <string name="text_pass_new_hint">New password</string>
    <string name="text_pass_retype_hint">Confirm new password</string>
    <string name="text_bio_hint">Bio</string>
    <string name="text_address_hint">Address</string>
    <string name="text_zip_code_hint">Zip Code</string>
    <string name="text_done">Done</string>
    <string name="text_number_hint">Phone</string>
    <string name="text_phone_no_hint">Phone no.</string>
    <string name="text_referral">Referral</string>
    <string name="text_error">Error</string>
    <string name="text_enter_ref_code">Referral code</string>
    <string name="text_skip">Skip</string>
    <string name="text_submit">Submit</string>
    <string name="text_your_referral_code">Your referral code</string>
    <string name="text_your_referral_credit">Your referral credit</string>
    <string name="text_share_referral">Share your referral code with friends and get extra referral credits.</string>
    <string name="text_share_referral_code">Share referral code</string>
    <string name="text_referral_share_with_"> Referral Share With</string>
    <string name="text_invoice">Invoice</string>
    <string name="text_feed_back">Feedback</string>
    <string name="text_base_price">Base price</string>
    <string name="text_distance_cost">Distance cost</string>
    <string name="text_time_cost_colon">Time fare:</string>
    <string name="text_time_cost">Time cost</string>
    <string name="text_referral_bonus">Referral bonus</string>
    <string name="text_promo_bonus">Promo Bonus</string>
    <string name="text_total">Total</string>
    <string name="text_delete_card">Delete card</string>
    <string name="text_exit_caps">Exit</string>
    <string name="text_comment_hint">Write about your experience. We are always happy to hear from you. </string>
    <string name="text_comment_caps">Comment</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_cancel_trip">Cancel trip</string>
    <string name="text_credit_card_number">Credit card number</string>
    <string name="text_mm">mm</string>
    <string name="text_yy">yy</string>
    <string name="text_cvc">cvv</string>
    <string name="text_hint_search_destination">Search destination</string>
    <string name="text_home">Home</string>
    <string name="text_work">Work</string>
    <string name="text_hint_home_address">Home address</string>
    <string name="text_hint_work_address">Work address</string>
    <string name="text_car_id">Car Id</string>
    <string name="text_plate_no">License plate no.</string>
    <string name="text_card">Card</string>
    <string name="text_cash">Cash</string>
    <string name="text_continue">Get a ride</string>
    <string name="text_enter_promo_code">Enter promo code</string>
    <string name="text_hint_destination">Type destination location</string>
    <string name="text_pick_up_location">Type pick up location</string>
    <string name="text_ride_now">Ride Now</string>
    <string name="text_ride_later">Ride Later</string>
    <string name="text_select_date">Select Date</string>
    <string name="text_min_fare_caps">Min. Fare</string>
    <string name="text_max_size">Max Size:</string>
    <string name="text_min_fare">Min Fare:</string>
    <string name="text_base_fare">Base Fare:</string>
    <string name="text_per_km">Distance Fare:</string>
    <string name="text_tax_colen">Tax:</string>
    <string name="text_cancel_fee_colen">Cancellation Fee:</string>
    <string name="text_get_fare_estimate">Set Destination</string>
    <string name="text_country_codes">Country Codes</string>
    <string name="text_destination">Destination </string>
    <string name="text_pick_up">Pick up </string>
    <string name="text_driver_started">Provider is on his way to your location</string>
    <string name="text_driver_accepted">Provider has accepted your trip</string>
    <string name="text_driver_arrvied">Provider has arrived at your location</string>
    <string name="text_trip_started">Your trip has started</string>
    <string name="text_trip_completed">Your trip has been completed</string>
    <string name="text_from">From</string>
    <string name="text_to">To</string>
    <string name="text_yesterday">Yesterday</string>
    <string name="text_today">Today</string>
    <string name="text_trip_statistic">Your trip statistics</string>
    <string name="text_account_yet">Don\'t have an account yet ?</string>
    <string name="text_create_account">Create an account</string>
    <string name="text_already_account">Already haven an account?</string>
    <string name="text_yes">Yes</string>
    <string name="text_no">No</string>
    <string name="text_send">Send</string>
    <string name="text_camera">Camera</string>
    <string name="text_gallery">Gallery</string>
    <string name="text_add_new_card">Add New Card</string>
    <string name="text_other_card">Other Cards</string>
    <string name="text_remove">Remove</string>
    <string name="text_selected_card">Selected Card</string>
    <string name="text_select">Select</string>
    <string name="text_on_going">Ongoing Trip</string>
    <string name="text_up_coming_trip">Upcoming trips</string>
    <string name="text_enter_country_name">Search Country</string>
    <string name="text_unit_mins" translatable="false">min</string>
    <string name="text_unit_kms" translatable="false">km</string>
    <string name="text_unit_km" translatable="false">km</string>
    <string name="text_unit_min" translatable="false">min</string>
    <string name="text_unit_per_kms" translatable="false">/</string>
    <string name="text_unit_per_min" translatable="false">/min</string>
    <string name="text_person"> Person</string>
    <string name="text_re_try">Retry</string>
    <string name="text_i_am_sure">I\'m sure</string>
    <string name="text_settings">Settings</string>
    <string name="text_version">App Version</string>
    <string name="text_waiting_for_address">Waiting for address</string>
    <string name="text_total_time">Total time</string>
    <string name="text_total_distance">Total distance</string>
    <string name="text_change_password">Change password</string>
    <string name="text_verify_account">Verify account</string>
    <string name="text_verify_detail">Verify detail</string>
    <string name="text_defult_string">00</string>
    <string name="text_unit_per_time">/min</string>
    <string name="text_distance">Distance</string>
    <string name="text_cancel_reason">Cancellation reason</string>
    <string name="text_other">Other</string>
    <string name="text_enter_cancel_reason_hint">Enter cancellation reason</string>
    <string name="text_unit_per">Per </string>
    <string name="text_tax">Tax</string>
    <string name="text_tax_price">Tax price</string>
    <string name="text_tax_total">Tax total</string>
    <string name="text_email_otp">Email otp</string>
    <string name="text_phone_otp">Phone otp</string>
    <string name="text_verify">Verify</string>
    <string name="text_caution">Caution!</string>
    <string name="text_confirm">Confirm</string>
    <string name="text_promo_apply">Apply promo</string>
    <string name="text_tip_apply">Tip</string>
    <string name="text_apply">Apply</string>
    <string name="text_enter_promo_hint">Enter promo</string>
    <string name="text_enter_tip_hint">Enter tip amount</string>
    <string name="text_trip_status_alert">Sound alert</string>
    <string name="text_trip_status_alert_description">Play sound when the provider has changed his\nstatus during trip.</string>
    <string name="text_payment_pending">Pending</string>
    <string name="text_wait_time_cost">Waiting time cost</string>
    <string name="text_surge_price">Surge price</string>
    <string name="text_discount">Discount</string>
    <string name="text_payment_with_card">Paid by card</string>
    <string name="text_payment_with_cash">Paid by cash</string>
    <string name="text_request_again">Request again</string>
    <string name="text_add_contact">Add contact</string>
    <string name="text_emergency_contact">Emergency contacts</string>
    <string name="text_you_canceled_a_trip">Cancelled trip</string>
    <string name="text_sos">SOS</string>
    <string name="text_you_add_five_contact">You can add 5 contacts</string>
    <string name="text_take_a_picture_and_upload">Take a picture or upload from gallery</string>
    <string name="text_email_phone">Email or phone</string>
    <string name="msg_loading">Loading…</string>
    <string name="msg_waiting_for_registering">Waiting for registration…</string>
    <string name="msg_waiting_for_ratting">Sending feedback…</string>
    <string name="msg_waiting_for_sing_in">Please wait until we sign you in…</string>
    <string name="msg_waiting_for_add_card">Adding card, please wait…</string>
    <string name="msg_waiting_for_delete_card">Deleting card, please wait…</string>
    <string name="msg_waiting_for_history">Waiting for history… </string>
    <string name="msg_waiting_for_detail_history">Waiting for history details…</string>
    <string name="msg_referral">You can add a referral code provided by your friend here to get free
        credits. If you do not have one or don\'t want to insert one, then just click on Skip button
        below.
    </string>
    <string name="msg_cancel_tip_reason_1">My driver and I couldn\'t connect. </string>
    <string name="msg_cancel_tip_reason_2">Wrong address or location shown.</string>
    <string name="msg_cancel_tip_reason_3">The eta was too long.</string>
    <string name="msg_cancel_tip_caution">Caution! \nWe may apply charges for cancellation of trip. </string>
    <string name="error_referral_invalid">Please enter valid referral code. </string>
    <string name="text_ok" tools:ignore="ButtonCase,Typos">Ok</string>
    <string name="text_male">Male</string>
    <string name="text_female">Female</string>
    <string name="text_which_provider_you_want_request">Which driver would you like to request?</string>
    <string name="text_select_language">Select language</string>
    <string name="text_access_pref">Accessibility Preference</string>
    <string name="text_handicap">Handicap</string>
    <string name="text_baby_seat">Baby seat</string>
    <string name="text_hotspot">Hotspot</string>
    <string name="text_select_server" translatable="false">Select Server</string>
    <string name="text_live" translatable="false">Live</string>
    <string name="text_staging" translatable="false">Staging</string>
    <string name="text_developer" translatable="false">Developer</string>
</resources>