<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cvProductFilter"
    android:layout_width="250dp"
    android:layout_height="450dp"
    android:layout_gravity="top|end"
    android:layout_marginEnd="@dimen/activity_horizontal_margin"
    android:layout_marginBottom="@dimen/activity_horizontal_margin"
    android:background="@color/color_white"
    android:visibility="gone"
    app:cardCornerRadius="@dimen/card_radius"
    app:cardElevation="@dimen/dialog_elevation">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_white"
        android:orientation="vertical">


        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="@dimen/activity_horizontal_margin">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <com.elluminati.eber.components.MyAppTitleFontTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_which_provider_you_want_request"
                        android:textColor="@color/color_app_text"
                        android:textSize="@dimen/size_general" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dimen_bill_margin_two"
                        android:gravity="center_vertical"
                        android:orientation="vertical">

                        <CheckBox
                            android:id="@+id/cbMale"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/activity_horizontal_margin"
                            android:text="@string/text_male" />

                        <CheckBox
                            android:id="@+id/cbFemale"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/text_female" />
                    </LinearLayout>
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="@dimen/activity_horizontal_padding"
                    android:layout_marginBottom="@dimen/activity_horizontal_padding"
                    android:background="@color/color_app_divider_horizontal"
                    android:visibility="gone" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.elluminati.eber.components.MyAppTitleFontTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/dimen_bill_margin_two"
                        android:text="@string/text_access_pref"
                        android:textColor="@color/color_app_text"
                        android:textSize="@dimen/size_general" />


                    <CheckBox
                        android:id="@+id/cbHandicap"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/activity_horizontal_margin"
                        android:text="@string/text_handicap" />

                    <CheckBox
                        android:id="@+id/cbBabySeat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/activity_horizontal_margin"
                        android:text="@string/text_baby_seat" />

                    <CheckBox
                        android:id="@+id/cbHotspot"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_hotspot" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="@dimen/activity_horizontal_padding"
                    android:layout_marginBottom="@dimen/activity_horizontal_padding"
                    android:background="@color/color_app_divider_horizontal" />

                <LinearLayout
                    android:id="@+id/llSelectLanguage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.elluminati.eber.components.MyAppTitleFontTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_select_language"
                        android:textColor="@color/color_app_text"
                        android:textSize="@dimen/size_general" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rcvSpeakingLanguage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dimen_bill_margin_two">

                    </androidx.recyclerview.widget.RecyclerView>
                </LinearLayout>


            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

        <com.elluminati.eber.components.MyFontButton
            android:id="@+id/btnApplyFilter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_horizontal_margin"
            android:layout_marginEnd="@dimen/dimen_horizontal_margin"
            android:background="@drawable/selector_rect_shape_blue"
            android:text="@string/text_apply"
            android:textAllCaps="false"
            android:textColor="@color/color_white"
            android:textSize="@dimen/size_general_small" />

        <com.elluminati.eber.components.MyFontButton
            android:id="@+id/btnCancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_horizontal_margin"
            android:layout_marginEnd="@dimen/dimen_horizontal_margin"
            android:background="@android:color/transparent"
            android:text="@string/text_cancel"
            android:textAllCaps="false"
            android:textColor="@color/color_app_text"
            android:textSize="@dimen/size_general_small" />
    </LinearLayout>
</androidx.cardview.widget.CardView>